@@ -1,3 +1,8 @@
+2013-07-31 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_ui.php: reduced the char lenght of title in
+	the header for to avoid crash when have title with wide chars.
+
 2013-07-31  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_agents.php: Fix a if condition
